Fix vertical alignment on inner h1s

--- a/styles/hero.module.css
+++ b/styles/hero.module.css
@@ -34,6 +34,7 @@
 
 /* Interior pages hero */
 .pageHeroMaster {
+  padding-top: 100px;
   width: 100%;
   height: 500px;
   background-image: url('../public/page-hero-bg.jpg');
